# PDFSplitMerger

./: .README.md.un~  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PDFSplitter.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfcore.cpp  pdfcore.h
PDFSplitMerger_Deployed/: .PDFSplitter.sh.un~  PDFSplitter  PDFSplitter.sh  libfreetype.so.6  libpodofo.so.0.9.3  run
license/: freetype_LICENSE
linux_bin/: PDFSplitter
